@@ -38,6 +38,8 @@
 <p>2018-04-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/txt.c (ReadTXTImage): Assure that all image pixels are
+initialized to black.</li>
 <li>Magick++/demo/zoom.cpp (main): Add a -read-blob option to read
 input file into a Blob so that it is read by the Blob reader
 rather than the file reader.  Default the output Geometry to the
