@@ -1,5 +1,8 @@
 2018-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/txt.c (ReadTXTImage): Assure that all image pixels are
+	initialized to black.
+
 	* Magick++/demo/zoom.cpp (main): Add a -read-blob option to read
 	input file into a Blob so that it is read by the Blob reader
 	rather than the file reader.  Default the output Geometry to the
